# ndoh-hub

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  test.yaml
aaq/: apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
aaq/tests/: helpers.py  test_tasks.py  test_utils.py  test_views.py
ada/: admin.py  apps.py  models.py  serializers.py  tasks.py  test_tasks.py  test_utils.py  tests_models.py  tests_urls.py  tests_views.py  urls.py  utils.py  validators.py  views.py
ada/migrations/: 0001_initial.py  0002_auto_20210503_0144.py  0002_auto_20210504_1424.py  0002_auto_20210505_0815.py  0003_redirecturl_content.py  0003_remove_redirecturl_refresh_url.py  0004_auto_20210503_1312.py  0004_auto_20210506_0726.py  0005_auto_20210507_1256.py  0005_remove_redirecturlsentry_urls.py  0006_auto_20210510_0507.py  0006_redirecturlsentry_urls.py  0007_auto_20210504_0408.py  0007_remove_redirecturl_url.py  0008_redirecturl_refresh_url.py  0008_redirecturl_url.py  0009_redirecturlsentry_parameter.py  0009_remove_redirecturl_refresh_url.py  0010_redirecturl_refresh_url.py  0010_remove_redirecturl_url.py  0011_auto_20210504_0916.py  0011_redirecturl_url.py  0012_auto_20210504_1037.py  0012_auto_20210511_0657.py  0013_auto_20210504_1108.py  0013_remove_redirecturl_url.py  0014_adaassessment.py  0014_adaassessments.py  0014_adaselfassessment.py  0015_adaselfassessment_roadblock.py  0015_auto_20220323_0646.py  0015_auto_20220421_1220.py  0016_auto_20220323_0943.py  0016_auto_20220524_1349.py  0017_auto_20220323_1743.py  0017_coviddatalakeentry.py  0018_auto_20220323_1811.py  0019_adaassessment_title.py
changes/: __init__.py  admin.py  apps.py  fields.py  models.py  serializers.py  signals.py  tasks.py  test_fields.py  test_models.py  test_serializers.py  test_tasks.py  test_views.py  tests.py  urls.py  views.py
changes/migrations/: 0001_initial.py  0002_auto_20160802_0612.py  0003_auto_20160819_0832.py  0004_auto_20160826_1147.py  0005_auto_20170601_1354.py  0006_auto_20170718_1414.py  0007_auto_20180212_0745.py  0007_auto_20180212_0759.py  0008_auto_20181015_1002.py  0009_add_registrant_id_index_to_changes.py  0010_alter_change_data.py
docs/: jembi-app-registration.md
eventstore/: admin.py  apps.py  batch_tasks.py  forms.py  hcs_tasks.py  models.py  random_contacts.py  serializers.py  signals.py  tasks.py  test_batch_tasks.py  test_forms.py  test_hcs_tasks.py  test_models.py  test_random_contacts.py  test_tasks.py  test_turn_tasks.py  test_validators.py  test_views.py  test_whatsapp_actions.py  turn_tasks.py  validators.py  views.py  whatsapp_actions.py
eventstore/migrations/: 0001_create_optout.py  0002_create_babyswitch.py  0003_create_channelswitch.py  0004_create_publicregistration.py  0005_create_prebirthregistration.py  0006_create_postbirthregistration.py  0007_denormalise_created_by.py  0008_add_chw_registration.py  0008_events_messages.py  0009_auto_20191031_1314.py  0010_add_external_registration_id.py  0010_add_message_and_event.py  0010_events_messages.py  0011_add_message_and_event.py  0011_auto_20191107_0943.py  0012_add_msisdn_switch.py  0013_add_language_switch.py  0014_add_identification_switch.py  0015_add_research_optin_switch.py  0016_add_fallback_channel_flag.py  0017_pmtctregistration.py  0018_auto_20200129_1126.py  0018_auto_20200205_1033.py  0018_auto_20200206_1107.py  0019_babydobswitch_eddswitch.py  0019_deliveryfailures.py  0020_auto_20200302_1458.py  0020_deliveryfailure.py  0020_deliveryfailures.py  0021_auto_20200302_1121.py  0021_covid19triage.py  0022_cdu_address_update.py  0023_cdu_address_update_msisdn.py  0024_auto_20200407_1242.py  0025_add_difficulty_breathing.py  0026_add_whatsapp_fields_covid19triage.py  0027_normalise_msisdn.py  0028_covid19triage_completed_timestamp.py  0029_add_index_on_timestamp.py  0030_add_covid19_confirmed_contact_fields.py  (+45 more)
eventstore/tests/: test_hcs_tasks.py  test_models.py  test_tasks.py  test_validators.py  test_views.py  test_whatsapp_actions.py
mqr/: admin.py  apps.py  models.py  serializers.py  temp_publish_notes.md  urls.py  utils.py  views.py
mqr/migrations/: 0001_initial.py  0002_baselinesurveyresult.py  0003_auto_20220322_0539.py  0004_auto_20220322_0733.py  0005_auto_20220322_1350.py  0006_auto_20220323_0758.py  0007_auto_20220323_0852.py  0008_auto_20220404_0905.py  0009_auto_20220425_0911.py
mqr/tests/: test_models.py  test_randomizations.py  test_utils.py  test_views.py
ndoh_hub/: asgi.py  auth.py  celery.py  constants.py  decorators.py  routing.py  serializers.py  settings.py  test_decorators.py  test_routing.py  test_utils.py  testsettings.py  urls.py  utils.py  utils_tests.py  views.py  wsgi.py
ndoh_hub/tests/: test_utils.py  test_views.py
registrations/: __init__.py  admin.py  apps.py  consumers.py  fields.py  models.py  serializers.py  signals.py  tasks.py  test_consumers.py  test_fields.py  test_models.py  test_serializers.py  test_tasks.py  test_validators.py  test_views.py  tests.py  urls.py  validators.py  views.py
registrations/migrations/: 0001_initial.py  0002_auto_20160721_1536.py  0003_auto_20160721_1536.py  0004_auto_20160722_1019.py  0005_auto_20161117_0825.py  0005_rename_limited_authority_to_partial.py  0006_hw_partial_data_migration.py  0007_auto_20170615_1008.py  0008_auto_20170928_1025.py  0009_auto_20171027_0928.py  0010_auto_20180212_0802.py  0011_auto_20180227_1517.py  0012_registration_external_id.py  0013_historicalpositiontracker_positiontracker.py  0014_auto_20180503_1418.py  0015_auto_20181015_1002.py  0016_add_index_for_registrant_id.py  0017_create_whatsapp_contact.py  0018_add_subscription_check_permission.py  0019_add_whatsapp_postbirth_registration_type.py  0020_add_cclinic_code.py  (+10 more)
seaworthy/: conftest.py  fixtures.py  requirements.txt  test.py
template/: index.html  meta_refresh.html  topup_request.html
tools/: add-identity-to-jembi-csv.py
(+123 files in other folders)
